# openFPGALoader

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/workflows/: Test.yml
doc/: FPGAs.yml  boards.yml  cable.yml  conf.py  data.py
doc/guide/: advanced.rst  install.rst  troubleshooting.rst
doc/vendors/: gowin.rst  intel.rst  xilinx.rst
scripts/: check-docs-data.py  check-docs-generated.py  check-docs-python.sh  check-docs.sh  flash-litex-m2sdr-multiboot.py
spiOverJtag/: Makefile  build.py
src/: altera.cpp  bitparser.cpp  board.hpp  cmsisDAP.cpp  cmsisDAP.hpp  colognechip.cpp  common.cpp  common.hpp  configBitstreamParser.hpp  dfu.cpp  dfu.hpp  efinix.cpp  ftdiJtagBitbang.cpp  ftdipp_mpsse.cpp  ftdipp_mpsse.hpp  ftdispi.cpp  gwu2x_jtag.cpp  gwu2x_jtag.hpp  ihexParser.cpp  jedParser.cpp  jlink.hpp  jtag.cpp  jtag.hpp  lattice.cpp  latticeBitParser.cpp  main.cpp  mcsParser.cpp  pofParser.cpp  pofParser.hpp  remoteBitbang_client.cpp  remoteBitbang_client.hpp  spiFlash.cpp  svf_jtag.cpp  usbBlaster.cpp  usbBlaster.hpp  xilinx.cpp  xilinx.hpp  xilinxPlatformCableUSB.cpp  xvc_client.cpp  xvc_client.hpp  (+2 more)
